                  * degrees of freedom correction implemented (set dfcor = TRUE).
       * "ips", "levinlin": p-values fixed (now one-sided to the left).
      * new tests: Choi (2001) modified P ("Pm"), inverse normal ("invnormal"),
                   logit ("logit").
  * pldv: new function to compute fixed and random effects models for
          truncated or censored dependent variable.
  * pbsytest:
      * test = "j": [joint test by Baltagi/Li(1991)]:
        fixed degrees of freedom (now df = 2 instead of df = 1).
      * unbalanced version of all statistics implemented (Sosa-Escudero/Bera (2008)).
      * new argument 're.normal' (only relevant for test = "re"): allows to compute
        the two-sided RE test when set to FALSE (default is TRUE which gives the
        one-sided RE test as before).
  * plm.data:
      * deprecated now (gives warning), use pdata.frame instead.
      * function internally uses pdata.frame now and then adjusts
        to get a "plm.dim" object as before. This way, plm.data
        benefits from bug fixes made previously to pdata.frame.
  * pdata.frame:
      * By default, the resulting pdata.frame is now closer to the original data:
         * columns with constant values and all-NA values are not removed anymore,
         * non-finite values are not substituted with NAs anymore,
         * unused factor levels are not dropped anymore (except for those
           variables serving to construct the index).
      * Arguments drop.NA.series, drop.const.series, replace.non.finite,
        drop.unused.levels introduced to remove/replace columns/values as described
        before (all default to FALSE).
  * punbalancedness: extended to calculate unbalancedness measures of nested panel 
                     structures as in Baltagi/Song/Jung (2001).
  * ranef: new function to calculate random effects from RE model objects, like
           fixef for FE models.
  * cortab: new function to compute cross-sectional correlation matrix.